--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>My Neighborhood Map</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <div class="container">
@@ -14,6 +16,18 @@
                     <input id="hide-listings" type="button" value="Hide Listings">
                     <hr>
                     <hr>
+                    
+                    <form id="form-container" class="form-container">
+                        <label for="city">City: </label><input type="text" id="city" value="">
+                        <br>
+                        <label for="state">State: </label><input type="text" id="state" value="">
+                        <br>
+                        <label for="term">Term: </label><input type="text" id="term" placeholder="(e.g. &quot;food&quot;, &quot;restaurants&quot; )" value="">
+
+                        <button id="submit-btn" data-bind="click: submit">Submit</button>
+                    </form>
+
+
                     <span class="text"> Draw a shape to search within it for homes!</span>
                     <input id="toggle-drawing" type="button" value="Drawing Tools">         
                 </div>
@@ -51,9 +65,9 @@
             <div id="map"></div>
         </div>
 
-         
-        <script src="js/lib/knockout-3.2.0.js"></script>
-        <script src="js/app.js"></script>
+        <script src="../js/libs/jquery.min.js"></script> 
+        <script src="../js/libs/knockout-3.2.0.js"></script>
+        <script src="../js/app.js"></script>
         <script async defer
             src=
             "https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyBx8rMSdcwelWB-HF1HMPyOuwynaZJERsI&v=3&callback=initMap">
