--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,20 @@
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 html,
 body {
     font-family: Arial, sans-serif;
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 600px;
+}
+
+.container {
+    position: relative;
 }
 
 div {
@@ -11,79 +22,215 @@ div {
     margin-bottom: 0em;
 }
 
-.container {
-    height: 100%;
-    position: relative;
-}
-
 input {
     font-size: 12px;
 }
 
-h1 {
-    color: #525454;
-    font-size: 22px;
-    margin: 0 0 10px 0;
-    text-align: center;
-}
-
-#hide-listings,
-#show-listings {
-    width: 48%;
-}
-
-hr {
-    background: #D0D7D9;
-    height: 1px;
-    margin: 20px 0 20px 0;
-    border: none;
-}
-
 #map {
-    bottom:0px;
+    background-color: #3993D7;
     height: 100%;
-    left: 362px;
+    bottom: 0;
+    right: 0;
+    left: 200px;
     position: absolute;
-    right: 0px;
 }
 
-.options-box {
-    background: #fff;
-    border: 1px solid #999;
-    border-radius: 3px;
-    height: 100%;
-    line-height: 35px;
-    padding: 10px 10px 30px 10px;
-    text-align: left;
-    width: 340px;
-}
-
-#pano {
+.search-results {
+    background-color: #777;
     width: 200px;
-    height: 200px;
+    height: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    overflow-y: scroll;
+}
+
+.one-result {
+    color: white;
+    width: 175px;
+    margin: 5px auto;
+}
+
+.one-result-container:hover {
+    background-color: #cccccc;
+
+}
+
+#zoom-to-area-text {
+    width: 300px;
+    display: inline-block;
+}
+
+#places-search {
+    width: 300px;
+    display: inline-block;
+}
+
+
+@media screen and (max-width: 699px){
+    .header {
+        background-color: #333;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 150px;
+        position: fixed;
+    }
+
+    .main-content {
+        left: 0;
+        right: 0;
+        top: 150px;
+        bottom: 0;
+        position: fixed;
+    }
+
+    .header-title {
+        color: white;
+        font-size: 20px;
+        display: block;
+        padding-left: 2px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        text-align: center;
+    }
+
+    .header-bar {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .location {
+        display: inline-block;
+        margin: 0 auto;
+        position: relative;
+        padding: 5px;
+
+    }
+
+    .query {
+        display: inline-block;
+        margin: 0 auto;
+        position: relative;
+        padding: 5px;
+    }
+
+    .search-results {
+        display: none
+    }
+
+    #map {
+        background-color: #3993D7;
+        height: 100%;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        position: absolute;
+    }
+}
+
+@media screen and (min-width: 700px){
+    .header {
+        background-color: #333;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100px;
+        position: fixed;
+    }
+
+    .main-content {
+        left: 0;
+        right: 0;
+        top: 100px;
+        bottom: 0;
+        position: fixed;
+    }
+
+    .header-title {
+        color: white;
+        font-size: 20px;
+        display: inline-block;
+        padding: 20px;
+        width: 180px;
+        height: 100%;
+        top: 10px;
+        left: 0;
+        word-wrap: break-word;
+        text-align: center;
+    }
+
+    .header-bar {
+        display: inline-block;
+        height: 100%;
+        left: 200px;
+        right: 0;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        position: absolute;
+    }
+
+    .location, .query {
+        padding: 5px;
+    }
+
+}
+
+@media screen and (min-width: 1150px){
+    .header {
+        background-color: #333;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+        position: fixed;
+    }
+
+    .main-content {
+        left: 0;
+        right: 0;
+        top: 60px;
+        bottom: 0;
+        position: fixed;
+    }
+
+    .location, .query {
+        display: inline-block;
+        padding: 5px;
+    }
+
+    .query input {
+        left: 20px;
+        position: relative;
+    }
+
+    .header-title {
+        color: white;
+        font-size: 20px;
+        display: inline-block;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        width: 200px;
+        height: 100%;
+        top: 10px;
+        left: 0;
+    }
+
+    .header-bar {
+        display: inline-block;
+        height: 100%;
+        left: 200px;
+        right: 0;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        position: absolute;
+    }
+
 }
 
 .text {
     font-size: 12px;
-}
-
-#toggle-drawing {
-    width: 27%;
-    position: relative;
-    margin-left: 10px;
-}
-
-#zoom-to-area-text {
-    position: relative;
-    width: 70%;
-}
-
-#zoom-to-area {
-    width: 24%;
-}
-
-#search-within-time-text {
-    width: 84%;
 }
 
 #business_info > img {
