--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,66 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <title>My Neighborhood Map</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
-        <div class="container">
-            <div class="options-box">
-                <h1>Find Your New NYC Home</h1>
-                <div>
-                    <input id="show-listings" type="button" value="Show Listings">
-                    <input id="hide-listings" type="button" value="Hide Listings">
-                    <hr>
-                    <hr>
-                    
-                    <form id="form-container" class="form-container">
-                        <label for="city">City: </label><input type="text" id="city" value="">
-                        <br>
-                        <label for="state">State: </label><input type="text" id="state" value="">
-                        <br>
-                        <label for="term">Term: </label><input type="text" id="term" placeholder="(e.g. &quot;food&quot;, &quot;restaurants&quot; )" value="">
-
-                        <button id="submit-btn" data-bind="click: submit">Submit</button>
-                    </form>
-
-
-                    <span class="text"> Draw a shape to search within it for homes!</span>
-                    <input id="toggle-drawing" type="button" value="Drawing Tools">         
+        <div>
+            <div class="header">
+                <div class="header-title">
+                    <b>Neighborhood Map</b>
                 </div>
-                <hr>
-                <div>
-                    <input id="zoom-to-area-text" type="text" placeholder="Enter your favorite area!">
-                    <input id="zoom-to-area" type="button" value="Zoom">
-                </div>
-                <hr>
-                <div>
-                    <span class="text"> Within </span>
-                    <select id="max-duration">
-                        <option value="10">10 min</option>
-                        <option value="15">15 min</option>
-                        <option value="30">30 min</option>
-                        <option value="60">1 hour</option>
-                    </select>
-                    <select id="mode">
-                        <option value="DRIVING">drive</option>
-                        <option value="WALKING">walk</option>
-                        <option value="BICYCLING">bike</option>
-                        <option value="TRANSIT">transit ride</option>
-                    </select>
-                    <span class="text">of</span>
-                    <input id="search-within-time-text" type="text" placeholder="Ex: Google Office NYC or 75 9th Ave, New York, NY">
-                    <input id="search-within-time" type="button" value="Go">
-                </div>
-                <hr>
-                <div>
-                    <span class="text">Search for nearby places</span>
-                    <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
-                    <input id="go-places" type="button" value="Go">
+                <div class="header-bar">
+                    <div class="location">
+                        <input id="zoom-to-area-text" class="form-control" type="text" value="">
+                        <input data-bind="click: zoom" id="zoom-to-area" class="btn btn-default" type="button" value="Zoom">
+                    </div>
+                    <div class="query">
+                        <input id="places-search" class="form-control" type="text" value="">
+                        <input data-bind="click: textSearch" id="go-places" class="btn btn-default" type="button" value="Go">
+                    </div>
                 </div>
             </div>
-            <div id="map"></div>
+            <div class="main-content">
+                <div class="search-results" data-bind="foreach: placeMarkers">
+                    <div class="one-result-container">
+                        <div class="one-result" data-bind="text: $data.title, click: $parent.getMarkerInfo"></div>
+                    </div>
+                
+                </div>
+                <div id="map"></div>
+            </div>    
         </div>
 
         <script src="../js/libs/jquery.min.js"></script> 
