Turned all Dom dependent values in app.js to knockout observables. All functions inside the View Model class are now member functioons.
TO-DO:
- Animate markers
- Layout for mobile devices
- Improve filter functionality

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -19,12 +19,12 @@
                 </header-title>
                 <nav>
                     <nav-location>
-                        <input id="zoom-to-area-text" class="form-control" type="text" value="">
+                        <input id="zoom-to-area-text" class="form-control" data-bind="value: zoom_to_area_text" type="text">
                         <input id="zoom-to-area" class="btn btn-default" data-bind="click: zoom"  type="button" value="Zoom">
                     </nav-location>
                     <nav-query>
-                        <input id="places-search" class="form-control" type="text" value="">
-                        <input id="go-places" class="btn btn-default" data-bind="click: textSearch"   type="button" value="Go">
+                        <input id="places-search" class="form-control" data-bind="value: places_search" type="text">
+                        <input id="go-places" class="btn btn-default" data-bind="click: searchForText"   type="button" value="Go">
                     </nav-query>
                 </nav>
             </header>
