Created filter box for search results using Knockout. Made page responsive for mobile devices.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,14 +18,14 @@
                     <b>Neighborhood Map</b>
                 </header-title>
                 <nav>
-                    <nav-location>
+                    <div class="nav-location">
                         <input id="zoom-to-area-text" class="form-control" data-bind="value: zoom_to_area_text" type="text">
                         <input id="zoom-to-area" class="btn btn-default" data-bind="click: zoom"  type="button" value="Zoom">
-                    </nav-location>
-                    <nav-query>
+                    </div>
+                    <div class="nav-query">
                         <input id="places-search" class="form-control" data-bind="value: places_search" type="text">
                         <input id="go-places" class="btn btn-default" data-bind="click: searchForText"   type="button" value="Go">
-                    </nav-query>
+                    </div>
                 </nav>
             </header>
             <main>
