--- a/public/views/index.html
+++ b/public/views/index.html
@@ -45,6 +45,7 @@
         </script>
         <script src="../js/libs/jquery.min.js"></script> 
         <script src="../js/libs/knockout-3.2.0.js"></script>
+        <script src="../js/styles.json"></script>
         <script src="../js/app.js"></script>
         <script
             onerror="mapLoadingError()"
