--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,20 @@
 * {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+             box-sizing: border-box;
+
+    -webkit-hyphens: auto;
+       -moz-hyphens: auto;
+            hyphens: auto;
+    
 }
 
 html,
 body {
-    font-family: Arial, sans-serif;
+    font-family: arial, sans-serif;
     height: 100%;
     margin: 0;
     padding: 10px 10px 20px 20px;
-    min-width: 600px;
     background-color: #82ACC3;
 }
 
@@ -31,6 +35,10 @@ aside {
     width: 100%;
     margin: 5px;
 }
+
+.one-result:hover { 
+    color:  #996515;
+ }
 
 .one-result-container:hover {
     background-color: #cccccc;
@@ -151,7 +159,6 @@ aside {
     .nav-location, .nav-query {
         margin: 5px;
     }
-
 
 
     #map {
