--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,8 +60,10 @@ aside {
     header {
         top: 0;
         left: 0;
-        width: 100%;
+        right: 0;
+        position: absolute;
         height: 160px;
+
     }
 
     header-title {
@@ -73,6 +75,16 @@ aside {
         padding-bottom: 15px;
         text-align: center;
     }
+    
+    aside {
+        left: 0;
+        right: 0;
+        top: 520px;
+        bottom: 500px;
+        position: absolute;
+        background-color: #777;
+    }
+
 
     nav {
         display: flex;
@@ -96,11 +108,11 @@ aside {
 
     #map {
         background-color: #3993D7;
-        width: 100%;
-        height: 500px;
-        display: block;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 160px;
         position: absolute;
-
     }
 
     .one-result-container:hover {
